--- a/src/app/accounts/login/login.component.html
+++ b/src/app/accounts/login/login.component.html
@@ -1,14 +1,36 @@
+<div class="alert alert-success alert-dismissible fade show" *ngIf="success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    user logged successfully
+</div>
+<div class="alert alert-danger alert-dismissible fade show" *ngIf="error">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {{error}}
+</div>
+<div class="alert alert-danger alert-dismissible fade show" *ngIf="forgorerror">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {{forgorerror}}
+</div>
+<div class="alert alert-success alert-dismissible fade show" *ngIf="resetsuccess">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    password changed succcessfully.
+</div>
+<div class="alert alert-success alert-dismissible fade show" *ngIf="mailcheck">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    Plese check your mail to reset yur password
+</div>
+
 <div class="container" *ngIf="IsSignUpShow">
     <div class="row centered-form">
         <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">SIGNIN</h3>
+                    <h3 class="panel-title">SIGNIN &nbsp;<i class="fa fa-sign-in" aria-hidden="true"></i>
+                    </h3>
                 </div>
                 <div class="panel-body">
                     <form [formGroup]="loginForm" (ngSubmit)="onSignIn()">
                         <div class="form-group">
-                            <label>Email</label>
+                            <label class="labelcolor">Email</label>
                             <input type="text" formControlName="email" class="form-control"
                                 [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
@@ -17,7 +39,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <label>Password</label>
+                            <label class="labelcolor">Password</label>
                             <div class="form-group col-11">
                                 <input [type]="password" formControlName="password" class="form-control"
                                     [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
@@ -35,12 +57,13 @@
                             </div>
                         </div>
                         <div class="text-center">
-                            <button class="btn btn-primary mr-1">Login</button>
+                            <button class="btn mr-1">Login</button>
                             <button class="btn btn-secondary" type="reset" (click)="onResetRegister()">clear</button>
                         </div>
                     </form>
-                    <p class="center">Forgot password??
-                        <button type="button" class="link" (click)="openForgotModel()">
+                    <p class="center labelcolor">Forgot password?? &nbsp;<i class="fa fa-lock" aria-hidden="true"></i>
+
+                        <button type="button" class="linklogin" (click)="openForgotModel()">
                             Click here
                         </button></p>
 
@@ -58,7 +81,8 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h3 class="modal-title">FORGOT PASSWORD?</h3>
+                    <h3 class="modal-title">FORGOT PASSWORD? &nbsp;<i class="fa fa-lock" aria-hidden="true"></i>
+                    </h3>
                     <button type="button" class="close" (click)="closeModel()">&times;</button>
                 </div>
                 <!-- Modal body -->
@@ -72,11 +96,12 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary mr-1" (click)="onModalSave()" [disabled]="!email">Save</button>
+                    <button class="btn btn-primary mr-1" (click)="onForgotSave()" [disabled]="!email">Save</button>
                     <button type="reset" class="btn btn-danger" (click)="onForgotReset()">clear</button>
                 </div>
-                <p class="center">Reset password
-                    <button type="button" class="link" (click)="openResetModel()">
+                <p class="center">Reset password?&nbsp;<i class="fa fa-retweet" aria-hidden="true"></i>
+
+                    <button type="button" class="link reset" (click)="openResetModel()">
                         Click here
                     </button></p>
             </div>
@@ -91,7 +116,8 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h3 class="modal-title">Reset PASSWORD</h3>
+                    <h3 class="modal-title">Reset password &nbsp;<i class="fa fa-retweet" aria-hidden="true"></i>
+                    </h3>
                     <button type="button" class="close" (click)="closeModel()">&times;</button>
                 </div>
                 <!-- Modal body -->
@@ -109,7 +135,7 @@
                                 </div>
                             </div>
                             <div class="form-group col">
-                                <label>Confirm Password</label>
+                                <label class="cp">Confirm Password</label>
                                 <input type="password" formControlName="confirmPassword" class="form-control"
                                     [ngClass]="{ 'is-invalid': submitted && g.confirmPassword.errors }" />
                                 <div *ngIf="submitted && g.confirmPassword.errors" class="invalid-feedback">
@@ -118,11 +144,12 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-primary mr-1">ResetPassword</button>
-                        <button type="reset" class="btn btn-danger" (click)="onResetReset()">clear</button>
+                        <div class="center" >
+                            <button class="btn btn-primary mr-1 ">Reset</button>
+                            <button type="reset" class="btn btn-danger " (click)="onResetReset()">clear</button>
+                        </div>
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
