--- a/src/app/accounts/register/register.component.html
+++ b/src/app/accounts/register/register.component.html
@@ -1,88 +1,93 @@
 
-  <div class="alert alert-danger alert-dismissible fade show"*ngIf="error">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    {{error}}
-  </div>
-  <div class="alert alert-success alert-dismissible fade show"*ngIf="success">
-    <button  type="button" class="close" data-dismiss="alert">&times;</button>
-   user registered successfully
-  </div>
-<div class="container">
-    <div class="row centered-form">
-        <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">SIGNUP &nbsp;<i class="fa fa-user-plus" aria-hidden="true"></i>
-                    </h3>
-                </div>
-                <div class="panel-body">
-                    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <label> UserName</label>
-                                <input type="text" formControlName="firstName" class="form-control"
-                                    [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
-                                <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-                                    <div *ngIf="f.firstName.errors.required">First Name is required</div>
-                                </div>
-                            </div>
-                            <!-- <div class="form-group col">
-                                <label>Last Name</label>
-                                <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
-                                <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-                                    <div *ngIf="f.lastName.errors.required">Last Name is required</div>
-                                </div>
-                            </div> -->
+    <div class="card bg">
+        <div class="alert alert-danger alert-dismissible fade show" *ngIf="error">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{error}}
+        </div>
+        <div class="alert alert-success alert-dismissible fade show" *ngIf="success">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            user registered successfully
+        </div>
+        <div class="container">
+            <div class="row centered-form">
+                <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">SIGNUP &nbsp;<i class="fa fa-user-plus" aria-hidden="true"></i>
+                            </h3>
                         </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="text" formControlName="email" class="form-control"
-                                [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                                <div *ngIf="f.email.errors.required">Email is required</div>
-                                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <label>Password</label>
-                                <input type="password" formControlName="password" class="form-control"
-                                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                    <div *ngIf="f.password.errors.required">Password is required</div>
-                                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters
+                        <div class="panel-body">
+                            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                                <div class="form-row">
+                                    <div class="form-group col">
+                                        <label> UserName</label>
+                                        <input type="text" formControlName="firstName" class="form-control"
+                                            [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                                        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                                            <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="form-group col">
+                                        <label>Last Name</label>
+                                        <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                                        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                                            <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                                        </div>
+                                    </div> -->
+                                </div>
+                                <div class="form-group">
+                                    <label>Email</label>
+                                    <input type="text" formControlName="email" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                                    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                                        <div *ngIf="f.email.errors.required">Email is required</div>
+                                        <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group col">
-                                <label>Confirm Password</label>
-                                <input type="password" formControlName="confirmPassword" class="form-control"
-                                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
-                                <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-                                    <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
-                                    <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+                                <div class="form-row">
+                                    <div class="form-group col">
+                                        <label>Password</label>
+                                        <input type="password" formControlName="password" class="form-control"
+                                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                            <div *ngIf="f.password.errors.required">Password is required</div>
+                                            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group col">
+                                        <label>Confirm Password</label>
+                                        <input type="password" formControlName="confirmPassword" class="form-control"
+                                            [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+                                        <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                                            <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required
+                                            </div>
+                                            <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="form-group form-check">
+                                    <input type="checkbox" formControlName="acceptTerms" id="acceptTerms"
+                                        class="form-check-input"
+                                        [ngClass]="{ 'is-invalid': submitted && f.acceptTerms.errors }" />
+                                    <label for="acceptTerms" class="form-check-label">Accept Terms & Conditions</label>
+                                    <div *ngIf="submitted && f.acceptTerms.errors" class="invalid-feedback">Accept Ts & Cs
+                                        is
+                                        required</div>
+                                </div>
+                                <div class="text-center">
+                                    <button class="btn mr-1">Register <i class="fa fa-arrow-circle-right"
+                                            aria-hidden="true"></i>
+                                    </button>
+                                    <button class="btn btn-secondary" type="reset" (click)="onReset()">Cancel</button>
+                                </div>
+                            </form>
+                            <p class="center">Already SignIn?? &nbsp;<a routerLink="/login" type="button" class="link">
+                                    Click here
+                                </a></p>
                         </div>
-                        <div class="form-group form-check">
-                            <input type="checkbox" formControlName="acceptTerms" id="acceptTerms"
-                                class="form-check-input"
-                                [ngClass]="{ 'is-invalid': submitted && f.acceptTerms.errors }" />
-                            <label for="acceptTerms" class="form-check-label">Accept Terms & Conditions</label>
-                            <div *ngIf="submitted && f.acceptTerms.errors" class="invalid-feedback">Accept Ts & Cs is
-                                required</div>
-                        </div>
-                        <div class="text-center">
-                            <button class="btn mr-1">Register <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
-                            </button>
-                            <button class="btn btn-secondary" type="reset" (click)="onReset()">Cancel</button>
-                        </div>
-                    </form>
-                    <p class="center">Already SignIn?? &nbsp;<a routerLink="/login"type="button" class="link">
-                        Click here
-                    </a></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
