--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~font-awesome/css/font-awesome.css";
 
-body{
+/* body{
     background-color: black;
-}
+} */
 .alert{
     width: fit-content;
     margin-left: auto;
